added some popovers with tooltips to openpoll. their layout has still issues

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/storage": "^2.2.0",
     "@types/chart.js": "^2.7.48",
     "ajv": "^6.9.1",
+    "bootstrap": "4.1.1",
     "chart.js": "^2.7.3",
     "cordova-android": "7.1.4",
     "cordova-browser": "5.0.4",
@@ -46,6 +47,8 @@
     "cordova-support-google-services": "^1.1.0",
     "core-js": "^2.5.4",
     "ionic2-super-tabs": "^5.2.0",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-smart-popover": "^1.4.0",
     "phonegap-plugin-multidex": "^1.0.0",
     "phonegap-plugin-push": "2.2.3",
     "random-normal": "^1.0.0",
